--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 		<maven.compiler.target>11</maven.compiler.target>
 		<maven.enforcer.require.version>[11,)</maven.enforcer.require.version>
 		<maven.enforcer.require.message>Please use at least Java 11</maven.enforcer.require.message>
-		<java.main.class>exercice1.Exercise1</java.main.class>
+		<java.main.class>exercise1.Exercise1</java.main.class>
 
 	</properties>
 
@@ -27,13 +27,13 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.12</version>
+			<version>4.13.1</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.assertj</groupId>
 			<artifactId>assertj-core</artifactId>
-			<version>3.8.0</version>
+			<version>3.13.2</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -54,7 +54,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-enforcer-plugin</artifactId>
-				<version>3.0.0-M2</version>
+				<version>3.0.0-M3</version>
 				<executions>
 					<execution>
 						<id>enforce-versions</id>
@@ -75,7 +75,7 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-jar-plugin</artifactId>
-				<version>3.0.2</version>
+				<version>3.1.2</version>
 				<configuration>
 					<archive>
 						<manifest>
@@ -106,12 +106,12 @@
 			<plugin>
 				<groupId>org.asciidoctor</groupId>
 				<artifactId>asciidoctor-maven-plugin</artifactId>
-				<version>1.5.5</version>
+				<version>2.0.0</version>
 				<dependencies>
 					<dependency>
 						<groupId>org.asciidoctor</groupId>
 						<artifactId>asciidoctorj-pdf</artifactId>
-						<version>1.5.0-alpha.16</version>
+						<version>1.5.0-beta.7</version>
 					</dependency>
 				</dependencies>
 				<configuration>
